--- a/orm.config.json
+++ b/orm.config.json
@@ -1,19 +1,20 @@
 {
-  "type": "postgress",
-  "host": "localhost",
-  "port": 5433,
-  "username": "docker",
-  "password": "docker",
-  "database": "forum-api",
-  "synchronize": true,
-  "logging": false,
-  "entities": [
-     "src/entity/**/*.ts"
-  ],
-  "migrations": [
-     "src/migration/**/*.ts"
-  ],
-  "subscribers": [
-     "src/subscriber/**/*.ts"
-  ]
+   "type": "mongodb",
+   "database": "test",
+   "synchronize": true,
+   "logging": false,
+   "entities": [
+      "src/entity/**/*.ts"
+   ],
+   "migrations": [
+      "src/migration/**/*.ts"
+   ],
+   "subscribers": [
+      "src/subscriber/**/*.ts"
+   ],
+   "cli": {
+      "entitiesDir": "src/entity",
+      "migrationsDir": "src/migration",
+      "subscribersDir": "src/subscriber"
+   }
 }
