implementando o login do usuário com JWT

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,6 +1,6 @@
 {
    "type": "mongodb",
-   "database": "authdb",
+   "database": "forum",
    "synchronize": true,
    "logging": false,
    "entities": [
