--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,20 +1,16 @@
 {
-   "type": "mongodb",
-   "database": "forum",
-   "synchronize": true,
-   "logging": false,
-   "entities": [
-      "src/entity/**/*.ts"
-   ],
-   "migrations": [
-      "src/migration/**/*.ts"
-   ],
-   "subscribers": [
-      "src/subscriber/**/*.ts"
-   ],
-   "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
-   }
+  "type": "postgres",
+  "username": "postgres",
+  "password": "mysecretpassword",
+  "database": "forum",
+  "synchronize": true,
+  "logging": false,
+  "entities": ["src/entity/**/*.{ts,js}"],
+  "migrations": ["src/migration/**/*.{ts,js}"],
+  "subscribers": ["src/subscriber/**/*.{ts,js}"],
+  "cli": {
+    "entitiesDir": "src/entity",
+    "migrationsDir": "src/migration",
+    "subscribersDir": "src/subscriber"
+  }
 }
